# flight-manager/target/classes/api-spec.yaml
@@ -14,6 +14,17 @@ paths:
       operationId: getFlights
       produces:
         - application/json
+      parameters:
+        - in: query
+          name: page
+          default: 0
+          required: false
+          type: integer
+        - in: query
+          name: size
+          default: 10
+          required: false
+          type: integer
       responses:
         '201':
             description: list of flights sent
@@ -77,6 +88,17 @@ paths:
       operationId: getCustomers
       produces:
         - application/json
+      parameters:
+        - in: query
+          name: page
+          default: 0
+          required: false
+          type: integer
+        - in: query
+          name: size
+          default: 10
+          required: false
+          type: integer
       responses:
         '201':
           description: list of customers sent
